--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="cursor" data-owner="main"></span>
                   </h1>
             </div>
-            <button class="btn"><a href="mailto:goforprodev@gmail.com">Hire Me</a></button>
+            <button class="btn"><a href="mailto:goforprodev@gmail.com?subject=Send me your job description">Hire Me</a></button>
         </div>
         <div class="header-blob">
             <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/1000/svg">
